--- a/dummy-agent.ipynb
+++ b/dummy-agent.ipynb
@@ -5,21 +5,11 @@
    "execution_count": null,
    "id": "6a3a9d57",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "Agent.__init__() got an unexpected keyword argument 'agent'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Get weather by city\"\"\"\u001b[39;00m\n\u001b[32m      6\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33m30 degrees\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m agent = \u001b[43mAgent\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      9\u001b[39m \u001b[43m    \u001b[49m\u001b[43magent\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mAssistant Agent\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     10\u001b[39m \u001b[43m    \u001b[49m\u001b[43minstructions\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mYou are a helpful assistant. Use tools when needed to answer questions.\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     11\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtools\u001b[49m\u001b[43m=\u001b[49m\u001b[43m[\u001b[49m\u001b[43mget_weather\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     12\u001b[39m \u001b[43m)\u001b[49m\n\u001b[32m     14\u001b[39m stream = Runner.run_streamed(\n\u001b[32m     15\u001b[39m     agent, \u001b[33m\"\u001b[39m\u001b[33mHello how are you? What is the weather in the capital of Korea?\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     16\u001b[39m )\n\u001b[32m     18\u001b[39m message = \u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m\n",
-      "\u001b[31mTypeError\u001b[39m: Agent.__init__() got an unexpected keyword argument 'agent'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from agents import Agent, Runner, function_tool, ItemHelpers\n",
+    "from agents import Agent, Runner, function_tool, SQLiteSession\n",
+    "\n",
+    "session = SQLiteSession(\"user_1\", \"ai-memory.db\")\n",
     "\n",
     "@function_tool\n",
     "def get_weather(city: str):\n",
@@ -30,29 +20,31 @@
     "    name=\"My Assistant Agent\",\n",
     "    instructions=\"You are a helpful assistant. Use tools when needed to answer questions.\",\n",
     "    tools=[get_weather],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "41762390",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your name is Jinseong. If you need me to remember anything else or help with anything, just let me know!\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = await Runner.run(\n",
+    "    agent, \n",
+    "    \"What was my name?\",\n",
+    "    session = session,\n",
     ")\n",
     "\n",
-    "stream = Runner.run_streamed(\n",
-    "    agent, \"Hello how are you? What is the weather in the capital of Korea?\"\n",
-    ")\n",
-    "\n",
-    "message = \"\"\n",
-    "args = \"\"\n",
-    "\n",
-    "async for event in stream.stream_events():\n",
-    "\n",
-    "    if event.type == \"raw_response_event\":\n",
-    "        event_type = event.data.type\n",
-    "        if event_type == \"response.output_text.delta\":\n",
-    "            message += event.data.delta\n",
-    "            print(message)\n",
-    "        elif event_type == \"response.function_call_arguments.delta\":\n",
-    "            args += event.data.delta\n",
-    "            print(args)\n",
-    "        elif event_type == \"response.complete\":\n",
-    "            messsage = \"\"\n",
-    "            args = \"\"\n",
-    "        "
+    "print(result.final_output)"
    ]
   }
  ],
