--- a/dummy-agent.ipynb
+++ b/dummy-agent.ipynb
@@ -2,30 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "6a3a9d57",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from agents import Agent, Runner, function_tool, SQLiteSession\n",
+    "from agents import Agent, Runner, SQLiteSession\n",
     "\n",
     "session = SQLiteSession(\"user_1\", \"ai-memory.db\")\n",
     "\n",
-    "@function_tool\n",
-    "def get_weather(city: str):\n",
-    "    \"\"\"Get weather by city\"\"\"\n",
-    "    return \"30 degrees\"\n",
+    "geaography_agent = Agent(\n",
+    "    name=\"Geo Expert Agent\",\n",
+    "    instructions=\"You are a expert in geography, you answer questions related to them.\",\n",
+    "    handoff_description=\"Use this to answer geography related questions.\",\n",
+    ")\n",
     "\n",
-    "agent = Agent(\n",
-    "    name=\"My Assistant Agent\",\n",
-    "    instructions=\"You are a helpful assistant. Use tools when needed to answer questions.\",\n",
-    "    tools=[get_weather],\n",
+    "economics_agent = Agent(\n",
+    "    name=\"Economics Expert Agent\",\n",
+    "    instructions=\"You are a expert in economics, you answer questions related to them.\",\n",
+    "    handoff_description=\"Use this to answer economics questions.\",\n",
+    ")\n",
+    "\n",
+    "main_agent = Agent(\n",
+    "    name=\"Main Agent\",\n",
+    "    instructions=\"You are a user facing agent. Transfer to the agent most capable of answering the user's question.\",\n",
+    "    handoffs=[\n",
+    "        economics_agent,\n",
+    "        geaography_agent,\n",
+    "    ],\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "41762390",
    "metadata": {},
    "outputs": [
@@ -33,17 +43,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your name is Jinseong. If you need me to remember anything else or help with anything, just let me know!\n"
+      "Main Agent\n",
+      "========================================\n",
+      "Your name is Jinseong. How can I assist you further?\n"
      ]
     }
    ],
    "source": [
     "result = await Runner.run(\n",
-    "    agent, \n",
-    "    \"What was my name?\",\n",
+    "    main_agent, \n",
+    "    \"What is the biggest economy in the world?\",\n",
     "    session = session,\n",
     ")\n",
     "\n",
+    "print(result.last_agent.name)\n",
+    "print(\"==\"*20)\n",
     "print(result.final_output)"
    ]
   }
